# dotnet35_rand_rs

./: Cargo.toml  readme.md  update_log.md
src/: lib.rs
